--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
 apply plugin: 'com.android.application'
