--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kotlinfirebaseinsta">
-    
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinFirebaseInsta">
-        <activity android:name=".ui.UploadActivity"></activity>
+        <activity android:name=".ui.SignUpActivity"></activity>
+        <activity android:name=".ui.UploadActivity" />
         <activity android:name=".ui.FeedActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
