--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinFirebaseInsta">
-        <activity android:name=".ui.SignUpActivity"></activity>
+        <activity android:name=".ui.ProfileActivity"></activity>
+        <activity android:name=".ui.SignUpActivity" />
         <activity android:name=".ui.UploadActivity" />
         <activity android:name=".ui.FeedActivity" />
         <activity android:name=".ui.MainActivity">
