User profili oluşturuldu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".ui.SignUpActivity" />
         <activity android:name=".ui.UploadActivity" />
         <activity android:name=".ui.FeedActivity" />
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
